--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,10 +14,10 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="container">
+    <div>
 
 			<!-- Static navbar -->
-			<nav class="navbar navbar-default" role="navigation">
+			<nav class="navbar navbar-default navbar-static-top" role="navigation">
 			  <div class="navbar-header">
 			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 			      <span class="sr-only">Toggle navigation</span>
