--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,7 @@
 			  </div><!--/.nav-collapse -->
 			</nav>
 
-			<div>
+			<div class="container">
 			      <%if @error then %>
 			          <div class="alert alert-error"><%=@error%></div>
 			      <% end %>
